kube/ingress/ingress-blog.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-ingress
  namespace: blog
spec:
  rules:
  - host: techtriohub.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ghostservice
            port:
              number: 80
