kube/ingress/ingress-immich.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
  name: immich-ingress
  namespace: immich
spec:
  rules:
  - host: photos.sakthisaran.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: immich-service
            port:
              number: 80
