kube/ingress/ingress-portfolio.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-ingress
  namespace: blog
spec:
  rules:
  - host: nfs.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portfolio-service
            port:
              number: 80
      - path: /api/v1/
        pathType: Prefix
        backend:
          service:
            name:  portfolio-apiservice
            port:
              number: 80
      - path: /v3/
        pathType: Prefix
        backend:
          service:
            name:  portfolio-apiservice
            port:
              number: 80
